--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jan 03 15:42:40 CST 2019
-ndk.dir=D\:\\AndroidStudioSDK\\ndk-bundle
-sdk.dir=D\:\\AndroidStudioSDK
+#Mon Jan 07 10:54:39 CST 2019
+sdk.dir=C\:\\Users\\asus\\AppData\\Local\\Android\\Sdk
