--- a/example/build.gradle
+++ b/example/build.gradle
@@ -101,4 +101,6 @@ dependencies {
     api 'cn.jiguang.sdk:jcore:1.1.0'
     api 'com.android.support:multidex:1.0.3'
     annotationProcessor "com.github.hotchemi:permissionsdispatcher-processor:2.4.0"
+
+    implementation 'me.jessyan:autosize:1.1.1'
 }
