--- a/common_ui/build.gradle
+++ b/common_ui/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     api 'com.github.bumptech.glide:glide:4.8.0'
     api 'com.github.bumptech.glide:okhttp3-integration:4.0.0-RC0@aar'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    //图片压缩
+    api 'top.zibin:Luban:1.1.8'
     //Banner依赖
     api 'com.bigkoo:ConvenientBanner:2.1.4'
     api 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.3.7'
