--- a/local.properties
+++ b/local.properties
@@ -4,9 +4,9 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-<<<<<<< Updated upstream
-#Mon Jan 07 10:54:39 CST 2019
-=======
-#Mon Jan 07 16:11:01 CST 2019
->>>>>>> Stashed changes
-sdk.dir=C\:\\Users\\asus\\AppData\\Local\\Android\\Sdk
+#Tue Jan 08 15:48:07 CST 2019
+>>>>>>>=Stashed changes
+ndk.dir=D\:\\AndroidStudioSDK\\ndk-bundle
+sdk.dir=D\:\\AndroidStudioSDK
+=\=\=\=\=\=\=
+<<<<<<<=Updated upstream
