--- a/common_ui/build.gradle
+++ b/common_ui/build.gradle
@@ -51,4 +51,7 @@ dependencies {
     api 'com.daimajia.androidanimations:library:1.1.3@aar'
     //九宫格
     api 'com.lzy.widget:ninegridview:0.2.0'
+
+    //圆形图片
+    api 'de.hdodenhof:circleimageview:2.2.0'
 }
