--- a/common_ui/build.gradle
+++ b/common_ui/build.gradle
@@ -54,4 +54,7 @@ dependencies {
 
     //圆形图片
     api 'de.hdodenhof:circleimageview:2.2.0'
+
+    //视频剪裁
+    api 'com.github.kui92:FFmpegLibrary:3.2'
 }
