--- a/common_im/src/main/AndroidManifest.xml
+++ b/common_im/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <application>
         <provider
             android:name="android.support.v4.content.FileProvider"
-            android:authorities="com.example.myec"
+            android:authorities="com.example.myec.FileProvider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
