--- a/local.properties
+++ b/local.properties
@@ -7,4 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-sdk.dir=C\:\\Users\\asus\\AppData\\Local\\Android\\Sdk
+ndk.dir=D\:\\AndroidStudioSDK\\ndk-bundle
+sdk.dir=D\:\\AndroidStudioSDK
