--- a/common_im/build.gradle
+++ b/common_im/build.gradle
@@ -21,6 +21,14 @@ android {
         }
     }
 
+    sourceSets {
+        main {
+            manifest.srcFile '/src/main/AndroidManifest.xml'
+            res.srcDirs = ['/src/main/res']
+            jniLibs.srcDirs = ['/src/main/jniLibs']
+        }
+    }
+
 }
 
 dependencies {
