--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jan 15 12:15:42 CST 2019
-sdk.dir=C\:\\Users\\asus\\AppData\\Local\\Android\\Sdk
+#Wed Jan 16 15:21:01 CST 2019
+ndk.dir=D\:\\AndroidStudioSDK\\ndk-bundle
+sdk.dir=D\:\\AndroidStudioSDK
