科大讯飞，语音合成

--- a/common_ec/build.gradle
+++ b/common_ec/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     //视频处理
     api 'com.mabeijianxi:small-video-record2:2.0.3@aar'
     api project(':common_im')
+    api project(':common_xfyun')
 }
