修改登录逻辑页面、科大听写（60%）、整合设计规范、basepopu（30%）

--- a/common_ui/build.gradle
+++ b/common_ui/build.gradle
@@ -57,4 +57,7 @@ dependencies {
 
     //视频剪裁
     api 'com.github.kui92:FFmpegLibrary:3.2'
+
+    //BasePopup
+    api 'com.github.razerdp:BasePopup:2.1.7'
 }
