--- a/example/build.gradle
+++ b/example/build.gradle
@@ -23,6 +23,11 @@ android {
             //选择要添加的对应cpu类型的.so库。
             abiFilters 'armeabi', 'armeabi-v7a', 'armeabi-v8a', 'x86', 'x86_64', 'mips', 'mips64'
         }
+        /*basepopuwindow Start*/
+        renderscriptTargetApi 25
+        renderscriptSupportModeEnabled true
+        /*basepopuwindow End*/
+
 
 //        manifestPlaceholders = [
 //                JPUSH_PKGNAME: applicationId,
