1.朋友列表、朋友圈相关接口修改 2.选择好友功能（80%）

--- a/common_ui/build.gradle
+++ b/common_ui/build.gradle
@@ -60,4 +60,8 @@ dependencies {
 
     //BasePopup
     api 'com.github.razerdp:BasePopup:2.1.7'
+
+    //拼音
+    api 'com.github.promeg:tinypinyin:2.0.3'
+    api 'io.reactivex:rxandroid:1.2.1'
 }
