--- a/common_core/build.gradle
+++ b/common_core/build.gradle
@@ -169,8 +169,10 @@ dependencies {
 
     //    api 'com.github.yalantis:ucrop:2.2.2-native'
 
-
     //图片视频选取(包含ucrop、LuBan)
     api 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.3'
+    //崩溃SpiderMan
+    debugApi 'com.simple:spiderman:1.0.8'
+    releaseApi 'com.simple:spiderman-no-op:1.0.8'
 
 }
