--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Tue Jan 22 13:49:08 CST 2019
-sdk.dir=C\:\\Users\\asus\\AppData\\Local\\Android\\Sdk
+ndk.dir=D\:\\AndroidStudioSDK\\ndk-bundle
+sdk.dir=D\:\\AndroidStudioSDK
