--- a/tuikit/build.gradle
+++ b/tuikit/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-
+apply plugin: 'com.jakewharton.butterknife'
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -55,5 +55,6 @@ dependencies {
 //    implementation 'com.github.promeg:tinypinyin:1.0.0' // ~80KB
 //    implementation(name: 'imsdk_4.0.0.1', ext: 'aar')
     api 'com.tencent.imsdk:imsdk:4.0.0.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc2'
 }
 
