--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Feb 01 16:46:01 CST 2019
-sdk.dir=C\:\\Users\\asus\\AppData\\Local\\Android\\Sdk
+#Tue Feb 12 09:05:30 CST 2019
+ndk.dir=D\:\\software\\AndroidStudioSDK\\ndk-bundle
+sdk.dir=D\:\\software\\AndroidStudioSDK
