--- a/common_tencent_tuikit/build.gradle
+++ b/common_tencent_tuikit/build.gradle
@@ -23,10 +23,14 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     api project(':tuikit')
     annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc2'
 }
