--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -101,9 +101,9 @@
             android:theme="@style/Theme.AppCompat.Translucent" />
 
 
-        <!--极光推送 START
-         Required SDK 核心功能
-         可配置android:process参数将PushService放在其他进程中
+        <!--极光推送 START-->
+         <!--Required SDK 核心功能
+         可配置android:process参数将PushService放在其他进程中-->
         <service
             android:name="cn.jpush.android.service.PushService"
             android:enabled="true"
@@ -116,8 +116,8 @@
             </intent-filter>
         </service>
 
-         since 1.8.0 option 可选项。用于同一设备中不同应用的JPush服务相互拉起的功能。
-         若不启用该功能可删除该组件，将不拉起其他应用也不能被其他应用拉起
+         <!--since 1.8.0 option 可选项。用于同一设备中不同应用的JPush服务相互拉起的功能。
+         若不启用该功能可删除该组件，将不拉起其他应用也不能被其他应用拉起-->
         <service
             android:name="cn.jpush.android.service.DaemonService"
             android:enabled="true"
@@ -128,7 +128,7 @@
             </intent-filter>
         </service>
 
-         Required SDK核心功能
+         <!--Required SDK核心功能-->
         <receiver
             android:name="cn.jpush.android.service.PushReceiver"
             android:enabled="true">
@@ -142,7 +142,7 @@
                     android:name="android.net.conn.CONNECTIVITY_CHANGE"
                     tools:ignore="BatteryLife" />
             </intent-filter>
-             Optional
+             <!--Optional-->
             <intent-filter>
                 <action android:name="android.intent.action.PACKAGE_ADDED" />
                 <action android:name="android.intent.action.PACKAGE_REMOVED" />
@@ -151,7 +151,7 @@
             </intent-filter>
         </receiver>
 
-         Required SDK核心功能
+         <!--Required SDK核心功能-->
         <activity
             android:name="cn.jpush.android.ui.PushActivity"
             android:configChanges="orientation|keyboardHidden"
@@ -165,48 +165,48 @@
             </intent-filter>
         </activity>
 
-         Required SDK核心功能
+         <!--Required SDK核心功能-->
         <service
             android:name="cn.jpush.android.service.DownloadService"
             android:enabled="true"
             android:exported="false" />
 
-         Required SDK核心功能
+         <!--Required SDK核心功能-->
         <receiver android:name="cn.jpush.android.service.AlarmReceiver" />
 
-         User defined. 用户自定义的广播接收器
+        <!-- User defined. 用户自定义的广播接收器-->
         <receiver
             android:name="com.bokang.yijia.push.PushReceiver"
             android:enabled="true">
             <intent-filter>
-                Required 用户注册SDK的intent
+                <!--Required 用户注册SDK的intent-->
                 <action android:name="cn.jpush.android.intent.REGISTRATION" />
-                Required 用户接收SDK消息的intent
+                <!--Required 用户接收SDK消息的intent-->
                 <action android:name="cn.jpush.android.intent.MESSAGE_RECEIVED" />
-                Required 用户接收SDK通知栏信息的intent
+                <!--Required 用户接收SDK通知栏信息的intent-->
                 <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED" />
-                Required 用户打开自定义通知栏的intent
+                <!--Required 用户打开自定义通知栏的intent-->
                 <action android:name="cn.jpush.android.intent.NOTIFICATION_OPENED" />
-                 接收网络变化 连接/断开 since 1.6.3
+                 <!--接收网络变化 连接/断开 since 1.6.3-->
                 <action android:name="cn.jpush.android.intent.CONNECTION" />
                 <category android:name="com.diabin.fastec.example" />
             </intent-filter>
         </receiver>
 
-         Required. For publish channel feature
+         <!--Required. For publish channel feature
          JPUSH_CHANNEL 是为了方便开发者统计APK分发渠道。
          例如:
          发到 Google Play 的APK可以设置为 google-play;
          发到其他市场的 APK 可以设置为 xxx-market。
-         目前这个渠道统计功能的报表还未开放。
+         目前这个渠道统计功能的报表还未开放。-->
         <meta-data
             android:name="JPUSH_CHANNEL"
             android:value="developer-default" />
-         Required. AppKey copied from Portal
+         <!--Required. AppKey copied from Portal-->
         <meta-data
             android:name="JPUSH_APPKEY"
-            android:value="26a34a494a1d5dc03b133b24" />
-        极光推送 END-->
+            android:value="92d47be47c94c2172b6dad0e" />
+        <!--极光推送 END-->
 
         <!--视频剪辑 START-->
         <activity
