--- a/tuikit/build.gradle
+++ b/tuikit/build.gradle
@@ -9,7 +9,10 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        ndk {
+            //TUIKIT目前仅提供armeabi-v7a的so库
+            abiFilters 'armeabi-v7a'
+        }
     }
 
     sourceSets {
