--- a/common_ec/src/main/AndroidManifest.xml
+++ b/common_ec/src/main/AndroidManifest.xml
@@ -1,2 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.latte.ec" />
+    package="com.example.latte.ec" >
+
+    <application
+        android:allowBackup="true"
+        android:label="@string/app_name"
+        android:supportsRtl="true">
+        <activity
+            android:name="com.yijia.common_yijia.main.message.trtc.TRTCMainActivity"
+            android:launchMode="singleTask"
+            android:windowSoftInputMode="adjustPan"
+            android:screenOrientation="portrait" />
+
+
+    </application>
+</manifest>
