部分需求修改（注：修改后拓展性继续下降）

--- a/common_core/build.gradle
+++ b/common_core/build.gradle
@@ -167,7 +167,8 @@ dependencies {
 
         //图片剪裁
 
-        api 'com.github.yalantis:ucrop:2.2.2-native'
+//        api 'com.github.yalantis:ucrop:2.2.2-native'
+        api  project(':ucrop')
 
 //    //图片视频选取(包含ucrop、LuBan)
 //    api 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.3'
