--- a/ucrop/build.gradle
+++ b/ucrop/build.gradle
@@ -29,10 +29,14 @@ android {
 }
 
 dependencies {
-    api project(':common_ui')
+//    api project(':common_ui')
 //    //noinspection GradleCompatible
 //    compile "com.android.support:appcompat-v7:${cfgs.androidSupportVersion}"
 //    //noinspection GradleCompatible
 //    compile "com.android.support:recyclerview-v7:${cfgs.androidSupportVersion}"
 //    implementation "com.github.bumptech.glide:glide:${cfgs.glide}"
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
 }
