--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,14 @@ buildscript {
     
     repositories {
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        maven{ url'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
         google()
         mavenCentral()
         maven { url 'https://maven.google.com' }
+        maven { url 'https://dl.bintray.com/cjt/maven' }
+        maven { url "https://jitpack.io" }
         jcenter()
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
@@ -25,16 +29,18 @@ buildscript {
 allprojects {
     repositories {
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        maven{ url'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
         google()
         mavenCentral()
         maven { url 'https://maven.google.com' }
-        maven {
-            url 'https://dl.bintray.com/cjt/maven'
-        }
+        maven { url 'https://dl.bintray.com/cjt/maven' }
+        maven { url "https://jitpack.io" }
+        mavenCentral()
         jcenter()
         flatDir {
             dirs 'libs'
         }
+
     }
 }
 
@@ -49,22 +55,6 @@ allprojects {
 //    }
 //}
 
-allprojects {
-    repositories {
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/'}
-        maven {
-            url "https://jitpack.io"
-        }
-        mavenCentral()
-        maven { url 'https://maven.google.com' }
-        maven {
-            url 'https://dl.bintray.com/cjt/maven'
-        }
-        google()
-        jcenter()
-
-    }
-}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
