--- a/RCSticker/build.gradle
+++ b/RCSticker/build.gradle
@@ -29,7 +29,7 @@ android {
 }
 
 dependencies {
-    api fileTree(dir: 'libs', include: ['*.jar'])
+    api fileTree(include: ['*.jar'], dir: 'libs')
     api 'com.android.support:appcompat-v7:26.0.0'
     api project(':IMKit')
     api 'com.google.code.gson:gson:2.8.5'
