--- a/tuikit/build.gradle
+++ b/tuikit/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.jakewharton.butterknife'
 android {
     compileSdkVersion 28
+    buildToolsVersion '28.0.3'
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 28
@@ -14,21 +15,18 @@ android {
             abiFilters 'armeabi-v7a'
         }
     }
-
     sourceSets {
         main {
             assets.srcDirs = ['assets']
             jniLibs.srcDirs = ['libs']
         }
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
     repositories {
         flatDir {
             dirs 'libs'
@@ -37,6 +35,10 @@ android {
         google()
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 //afterEvaluate {
@@ -45,18 +47,18 @@ android {
 //}
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     api project(':common_ui')
-//    implementation "com.android.support:support-v4:27.1.1"
-//    implementation "com.android.support:appcompat-v7:27.1.1"
-//    implementation "com.android.support:support-annotations:27.1.1"
-//    implementation "com.android.support:recyclerview-v7:27.1.1"
+    //    implementation "com.android.support:support-v4:27.1.1"
+    //    implementation "com.android.support:appcompat-v7:27.1.1"
+    //    implementation "com.android.support:support-annotations:27.1.1"
+    //    implementation "com.android.support:recyclerview-v7:27.1.1"
     implementation 'it.sephiroth.android.library.imagezoom:library:1.0.4'
-//    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    //    implementation 'com.github.bumptech.glide:glide:4.7.1'
     //implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-//    implementation 'com.github.promeg:tinypinyin:1.0.0' // ~80KB
-//    implementation(name: 'imsdk_4.0.0.1', ext: 'aar')
+    //    implementation 'com.github.promeg:tinypinyin:1.0.0' // ~80KB
+    //    implementation(name: 'imsdk_4.0.0.1', ext: 'aar')
     api 'com.tencent.imsdk:imsdk:4.0.0.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc2'
 }
