--- a/ucrop/build.gradle
+++ b/ucrop/build.gradle
@@ -17,24 +17,23 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     lintOptions {
         abortOnError false
     }
-
     resourcePrefix 'ucrop_'
-
+    buildToolsVersion '28.0.3'
 }
 
 dependencies {
-//    api project(':common_ui')
-//    //noinspection GradleCompatible
-//    compile "com.android.support:appcompat-v7:${cfgs.androidSupportVersion}"
-//    //noinspection GradleCompatible
-//    compile "com.android.support:recyclerview-v7:${cfgs.androidSupportVersion}"
-//    implementation "com.github.bumptech.glide:glide:${cfgs.glide}"
+    //    api project(':common_ui')
+    //    //noinspection GradleCompatible
+    //    compile "com.android.support:appcompat-v7:${cfgs.androidSupportVersion}"
+    //    //noinspection GradleCompatible
+    //    compile "com.android.support:recyclerview-v7:${cfgs.androidSupportVersion}"
+    //    implementation "com.github.bumptech.glide:glide:${cfgs.glide}"
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
