--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+
+
     repositories {
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         maven{ url'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
@@ -21,6 +22,7 @@ buildscript {
         // in the individual module build.gradle files
 
         // 注册MobSDK
+        classpath "com.mob.sdk:MobSDK:2018.0319.1724"
 //        classpath "com.mob.sdk:MobSDK:2018.1119.1208"
 //        classpath "com.mob.sdk:MobSDK:2018.0319.1724"
     }
