--- a/common_bokang/build.gradle
+++ b/common_bokang/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.jakewharton.butterknife'
 apply plugin: 'org.greenrobot.greendao'
+apply plugin: 'com.mob.sdk'
 
 android {
     compileSdkVersion 28
@@ -35,7 +36,35 @@ android {
         abortOnError false
     }
 }
+MobSDK {
+    appKey "2a986c7b5bb14"
+    appSecret "ba40fb7e604fb6331b771471f341e2e7"
+    ShareSDK {
+        devInfo {
+//            SinaWeibo {
+//                appKey "568898243"
+//                appSecret "ba40fb7e604fb6331b771471f341e2e7"
+//                callbackUri "http://www.sharesdk.cn"
+//            }
+            Wechat {
+                appId "wxc2a7bbfa8dd91ff4"
+                appSecret "2b979696ed63a209b37d7a22ba52736e"
+                userName "gh_47652457d73c"
+//                path "pages/index/index.html?id=1"
+//                withShareTicket true
+//                miniprogramType 2
+            }
+//            QQ {
+//                appId "100371282"
+//                appKey "aed9b0303e3ed1e27bae87c33761161d"
+//            }
+//
 
+
+
+        }
+    }
+}
 dependencies {
     //    implementation fileTree(include: ['*.jar'], dir: 'libs')
     api project(':common_ui')
