--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,9 +1,10 @@
 apply plugin: 'com.android.application'
-//apply plugin: 'com.mob.sdk'
+apply plugin: 'com.mob.sdk'
 
 
 android {
     compileSdkVersion 28
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "com.bokang.yijia"
         minSdkVersion 19
@@ -45,28 +46,45 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    buildTypes {
+//    buildTypes {
+//        release {
+//            minifyEnabled false
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//        }
+//    }
+    //配置keystore签名
+    signingConfigs {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            storeFile file("yijia.keystore")
+            storePassword "bokang"
+            keyAlias "bokang"
+            keyPassword "bokang"
         }
     }
-    buildToolsVersion '28.0.3'
 
-    repositories{
-        flatDir{
+
+    buildTypes {
+        debug {
+            signingConfig signingConfigs.release
+        }
+        release {
+            signingConfig signingConfigs.release
+        }
+    }
+
+
+    repositories {
+        flatDir {
             dirs 'libs', '/../tencent_trtc_sdk/libs'
         }
     }
 }
-
 
 //configurations.all {
 //    resolutionStrategy.force 'com.android.support:support-v4:28.0.0'
 //    resolutionStrategy.force 'com.android.support:support-annotations:28.0.0'
 //    resolutionStrategy.force 'com.android.support:appcompat-v7:28.0.0'
 //}
-
 
 //MobSDK {
 //    appKey "29396398c0020"
@@ -101,7 +119,34 @@ android {
 //        }
 //    }
 //}
+MobSDK {
+    appKey "2a986c7b5bb14"
+    appSecret "ba40fb7e604fb6331b771471f341e2e7"
+    ShareSDK {
+        devInfo {
+//            SinaWeibo {
+//                appKey "568898243"
+//                appSecret "ba40fb7e604fb6331b771471f341e2e7"
+//                callbackUri "http://www.sharesdk.cn"
+//            }
+            Wechat {
+                appId "wxc2a7bbfa8dd91ff4"
+                appSecret "2b979696ed63a209b37d7a22ba52736e"
+                userName "gh_47652457d73c"
+//                path "pages/index/index.html?id=1"
+//                withShareTicket true
+//                miniprogramType 2
+            }
+//            QQ {
+//                appId "100371282"
+//                appKey "aed9b0303e3ed1e27bae87c33761161d"
+//            }
+//
 
+
+        }
+    }
+}
 
 dependencies {
     //    implementation fileTree(include: ['*.jar'], dir: 'libs')
