--- a/common_bokang/build.gradle
+++ b/common_bokang/build.gradle
@@ -36,35 +36,35 @@ android {
         abortOnError false
     }
 }
-MobSDK {
-    appKey "2a986c7b5bb14"
-    appSecret "ba40fb7e604fb6331b771471f341e2e7"
-    ShareSDK {
-        devInfo {
-//            SinaWeibo {
-//                appKey "568898243"
-//                appSecret "ba40fb7e604fb6331b771471f341e2e7"
-//                callbackUri "http://www.sharesdk.cn"
+//MobSDK {
+//    appKey "2a986c7b5bb14"
+//    appSecret "ba40fb7e604fb6331b771471f341e2e7"
+//    ShareSDK {
+//        devInfo {
+////            SinaWeibo {
+////                appKey "568898243"
+////                appSecret "ba40fb7e604fb6331b771471f341e2e7"
+////                callbackUri "http://www.sharesdk.cn"
+////            }
+//            Wechat {
+//                appId "wxc2a7bbfa8dd91ff4"
+//                appSecret "2b979696ed63a209b37d7a22ba52736e"
+//                userName "gh_47652457d73c"
+////                path "pages/index/index.html?id=1"
+////                withShareTicket true
+////                miniprogramType 2
 //            }
-            Wechat {
-                appId "wxc2a7bbfa8dd91ff4"
-                appSecret "2b979696ed63a209b37d7a22ba52736e"
-                userName "gh_47652457d73c"
-//                path "pages/index/index.html?id=1"
-//                withShareTicket true
-//                miniprogramType 2
-            }
-//            QQ {
-//                appId "100371282"
-//                appKey "aed9b0303e3ed1e27bae87c33761161d"
-//            }
+////            QQ {
+////                appId "100371282"
+////                appKey "aed9b0303e3ed1e27bae87c33761161d"
+////            }
+////
 //
-
-
-
-        }
-    }
-}
+//
+//
+//        }
+//    }
+//}
 dependencies {
     //    implementation fileTree(include: ['*.jar'], dir: 'libs')
     api project(':common_ui')
@@ -82,4 +82,5 @@ dependencies {
     implementation project(':picture_library')
     //    api 'cjt.library.wheel:camera:1.1.9'
     api project(':camera1.1.9')
+    api project(':mobshareplatform')
 }
