--- a/common_bokang/build.gradle
+++ b/common_bokang/build.gradle
@@ -83,4 +83,5 @@ dependencies {
     //    api 'cjt.library.wheel:camera:1.1.9'
     api project(':camera1.1.9')
     api project(':mobshareplatform')
+    api project(':baidutext')
 }
