--- a/example/build.gradle
+++ b/example/build.gradle
@@ -88,11 +88,11 @@ android {
     }
 }
 
-//configurations.all {
-//    resolutionStrategy.force 'com.android.support:support-v4:28.0.0'
-//    resolutionStrategy.force 'com.android.support:support-annotations:28.0.0'
-//    resolutionStrategy.force 'com.android.support:appcompat-v7:28.0.0'
-//}
+configurations.all {
+    resolutionStrategy.force 'com.android.support:support-v4:28.0.0'
+    resolutionStrategy.force 'com.android.support:support-annotations:28.0.0'
+    resolutionStrategy.force 'com.android.support:appcompat-v7:28.0.0'
+}
 
 //MobSDK {
 //    appKey "29396398c0020"
