--- a/common_bokang/build.gradle
+++ b/common_bokang/build.gradle
@@ -84,4 +84,7 @@ dependencies {
     api project(':camera1.1.9')
     api project(':mobshareplatform')
     api project(':baidutext')
+    implementation project(':ui_magicindicator')
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
 }
