--- a/common_bokang/build.gradle
+++ b/common_bokang/build.gradle
@@ -87,4 +87,5 @@ dependencies {
     implementation project(':ui_magicindicator')
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
