--- a/common_rongim/build.gradle
+++ b/common_rongim/build.gradle
@@ -23,9 +23,9 @@ android {
 
     sourceSets {
         main {
-            manifest.srcFile '/src/main/AndroidManifest.xml'
-            res.srcDirs = ['/src/main/res']
-            jniLibs.srcDirs = ['/src/main/jniLibs']
+            manifest.srcFile 'src/main/AndroidManifest.xml'
+            res.srcDirs = ['src/main/res']
+            jniLibs.srcDirs = ['src/main/jniLibs']
         }
     }
 
