--- a/common_bokang/build.gradle
+++ b/common_bokang/build.gradle
@@ -28,7 +28,7 @@ android {
     repositories{
 
         flatDir{
-            dirs 'libs', '/../tencent_trtc_sdk/libs'
+            dirs 'libs', '../tencent_trtc_sdk/libs'
         }
     }
     lintOptions{
