--- a/common_tencent_tuikit/build.gradle
+++ b/common_tencent_tuikit/build.gradle
@@ -33,7 +33,7 @@ android {
 
     repositories{
         flatDir{
-            dirs 'libs', '/../tencent_trtc_sdk/libs'
+            dirs 'libs', '../tencent_trtc_sdk/libs'
         }
     }
 }
