--- a/common_bokang/build.gradle
+++ b/common_bokang/build.gradle
@@ -4,11 +4,11 @@ apply plugin: 'org.greenrobot.greendao'
 apply plugin: 'com.mob.sdk'
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion '28.0.3'
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
     defaultConfig {
-        minSdkVersion 19
-        targetSdkVersion 28
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
 
