--- a/ucrop/build.gradle
+++ b/ucrop/build.gradle
@@ -1,10 +1,11 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 28
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
 
@@ -24,7 +25,6 @@ android {
         abortOnError false
     }
     resourcePrefix 'ucrop_'
-    buildToolsVersion '28.0.3'
 }
 
 dependencies {
