--- a/common_bokang/build.gradle
+++ b/common_bokang/build.gradle
@@ -84,7 +84,7 @@ dependencies {
     api project(':camera1.1.9')
     api project(':mobshareplatform')
     api project(':baidutext')
-    implementation project(':ui_magicindicator')
+    implementation project(':ui_magicindicator1.6.0')
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
