提醒设置,部分id->long、seekbar

--- a/common_ui/build.gradle
+++ b/common_ui/build.gradle
@@ -64,4 +64,8 @@ dependencies {
     api 'com.github.yhaolpz:FloatWindow:1.0.9'
     //引导层
     api 'com.github.huburt-Hu:NewbieGuide:v2.4.0'
+    //选择器
+    api  'com.contrarywind:Android-PickerView:4.1.8'
+    //seekbar
+    api 'com.github.warkiz.tickseekbar:tickseekbar:0.1.4'
 }
