--- a/common_bokang/build.gradle
+++ b/common_bokang/build.gradle
@@ -85,7 +85,5 @@ dependencies {
     api project(':mobshareplatform')
     api project(':baidutext')
     implementation project(':ui_magicindicator1.6.0')
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation project(':ui-tickseekbar0.1.4')
 }
