--- a/common_ui/build.gradle
+++ b/common_ui/build.gradle
@@ -67,5 +67,5 @@ dependencies {
     //选择器
     api  'com.contrarywind:Android-PickerView:4.1.8'
     //seekbar
-    api 'com.github.warkiz.tickseekbar:tickseekbar:0.1.4'
+//    api 'com.github.warkiz.tickseekbar:tickseekbar:0.1.4'
 }
