--- a/common_bokang/src/main/AndroidManifest.xml
+++ b/common_bokang/src/main/AndroidManifest.xml
@@ -1,47 +1,61 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.latte.ec" >
-    <uses-permission android:name="android.permission.FLASHLIGHT" />
-    <uses-feature android:name="android.hardware.camera" />
-    <uses-feature android:name="android.hardware.camera.autofocus" />
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+<?xml version="1.0" encoding="utf-8"?>
+<manifest package="com.example.latte.ec"
+          xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name="android.permission.FLASHLIGHT"/>
+
+    <uses-feature android:name="android.hardware.camera"/>
+    <uses-feature android:name="android.hardware.camera.autofocus"/>
+
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
+
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
-        <!--<activity
+        <activity
+            android:name="com.yijia.common_yijia.main.mine.SHCallingActivity"
+            android:label="@string/title_activity_shcalling"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <service
+            android:name="com.yijia.common_yijia.main.friends.CalledRegistService">
+        </service>
+        <!--
+        <activity
             android:name="com.yijia.common_yijia.main.message.trtc.TRTCMainActivity"
             android:launchMode="singleTask"
             android:windowSoftInputMode="adjustPan"
-            android:screenOrientation="portrait" />-->
+            android:screenOrientation="portrait" />
+        -->
         <activity
             android:name="com.yijia.common_yijia.main.message.trtc2.TRTCMainActivity2"
             android:launchMode="singleTask"
-            android:windowSoftInputMode="adjustPan"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name="com.yijia.common_yijia.main.message.trtc2.TRTCMainActivity3"
             android:launchMode="singleTask"
-            android:windowSoftInputMode="adjustPan"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name="com.yijia.common_yijia.main.message.trtc.CallWaitingActivity"
             android:launchMode="singleTask"
-            android:windowSoftInputMode="adjustPan"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name="com.yijia.common_yijia.main.message.trtc.CalledWaitingActivity"
             android:launchMode="singleTask"
-            android:windowSoftInputMode="adjustPan"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name="com.yijia.common_yijia.main.index.friendcircle.smallvideo.CameraActivity"
             android:launchMode="singleTask"
-            android:windowSoftInputMode="adjustPan"
-            android:screenOrientation="portrait" />
-
-
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"/>
     </application>
+
 </manifest>
