--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -63,6 +63,7 @@
         <meta-data
             android:name="com.amap.api.v2.apikey"
             android:value="180909d107c7f1ab21c4f8bc4a49b17f"/>
+        <service android:name="com.amap.api.location.APSService"></service>
         <!--高德地图 END-->
 
         <activity android:name="com.bokang.yijia.ExampleActivity"
