--- a/common_compiler/build.gradle
+++ b/common_compiler/build.gradle
@@ -11,6 +11,6 @@ dependencies {
 sourceCompatibility = "7"
 targetCompatibility = "7"
 
-tasks.withType(JavaCompile) {
-    options.encoding = "UTF-8"
-}
+//tasks.withType(JavaCompile) {
+//    options.encoding = "UTF-8"
+//}
